# specifications

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  generate_json_schema.py  generate_md.py  generate_py_model_schema.py  pyproject.toml
.github/workflows/: draft.yml
qua_spec/: __init__.py  ast_definition.schema.json  ast_model.py  config.yaml  flat_model.py  grammar.py  grammar.yaml  grammar_builder.py  grammar_model.py  model.py  predefined_validations.py  qua1_grammar.py  qua1_grammar.yaml  qua2_config.yaml  qua2_grammar.py  qua2_grammar.yaml  qua_valiidator.py  render.py
qua_spec/tests/: test_ast_model.py  test_grammar.py  test_grammar_validations.py  test_predefined_validations.py  test_rendering.py  validation_asts.py  x.py
qua_spec/tests/templates/: oop.jinja2
templates/: json_schema.jinja2  md.jinja2  py.jinja2  py2.jinja2
website/: docusaurus.config.js  package-lock.json  package.json  sidebars_v1.js  sidebars_v2.js
website/docs/: intro.md
website/v1/: intro.md
website/v2/: intro.md
