[tool.poetry]
name = "qua-specs"
version = "0.0.1"
description = "QUA specifications that can be used to generate QUA related code"
authors = ["Tal Shani <tal@quantum-machines.co>"]
license = "BSDv3"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
